# saxophone-intonation-table

./: .gitattributes  .gitignore  README.md  conftest.py  intonation_analyzer.spec  pyproject.toml  requirements.txt  sax_assets.py  sax_atomic.py  sax_audio_engine.py  sax_config.py  sax_coordination.py  sax_deck.py  sax_device.py  sax_drone.py  sax_export.py  sax_flow_layout.py  sax_i18n.py  sax_instrument_controller.py  sax_instruments.py  sax_intonation_chart.py  sax_intonation_gui.py  sax_intonation_log.py  sax_metronome.py  sax_mixer.py  sax_pitch_pipes.py  sax_session_state.py  sax_table.py  sax_theme.py  sim_harness.py  test_agg_stats.py  test_classify_error.py  test_coerce_range_entry.py  test_config_roundtrip.py  test_coordination.py  test_csv_bom_import.py  test_csv_import_paths.py  test_deck.py  test_drone.py  test_drone_pitch.py  (+23 more)
.github/workflows/: release.yml
docs/: parity-sprint-plan.md  response-modes.md  v1.0-acceptance.md  v1.1-hardening.md
scripts/: gui_smoke.py  theme_shots.py
tools/: make_icon.py  tsf_pack_smoke.py
tools/musescore/: _generated_ranges.py  _notes.txt  sync_ranges.py
