[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "saxophone-intonation-table"
version = "0.7.0"
description = "Real-time saxophone intonation analyzer with cents-deviation table and chart export."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Repro" }]
dependencies = [
    "PyQt6~=6.7",
    "numpy~=2.0",
    "sounddevice~=0.5",
    "reportlab~=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller~=6.0",
    "Pillow~=10.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
